--- a/proyecto02/appsettings.json
+++ b/proyecto02/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.;Initial Catalog=Buildtrack;Integrated Security=True;Encrypt=False"
+  }
 }
